<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:TagsEditText="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_background"
            android:padding="4dp"
            tools:context=".activity.AddTaskActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/add_task_top_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/add_task_top_title"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/add_task_image"
                        android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:layout_margin="4dp"
                        android:background="@drawable/add_task_background" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@id/cardview1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/add_task_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/title" />

                    <EditText
                        android:id="@+id/add_task_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/description" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@id/cardview2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/add_task_priority"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/add_task_priority_checkbox" />

                    <mabbas007.tagsedittext.TagsEditText
                        android:id="@+id/tagsEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@null"
                        android:hint="@string/tag_hint"
                        TagsEditText:allowSpaceInTag="true"
                        TagsEditText:tagsBackground="@drawable/ovaltag"
                        TagsEditText:tagsCloseImageRight="@drawable/tag_close"
                        TagsEditText:tagsTextColor="@color/white"
                        TagsEditText:tagsTextSize="@dimen/defaultTagsTextSize" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:id="@+id/cardview4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@id/cardview3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                        android:id="@+id/add_task_end_date_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/select_date" />

                    <io.blackbox_vision.datetimepickeredittext.view.TimePickerEditText
                        android:id="@+id/add_task_end_time_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/select_time" />

                    <LinearLayout
                        android:id="@+id/place_picker_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <EditText
                            android:id="@+id/place_picker_text"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.98"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/place_hint" />

                        <Button
                            android:id="@+id/placer_picker_button"
                            android:layout_width="40dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.02"
                            android:background="@drawable/ic_add_location" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardview5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@id/cardview4">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <io.blackbox_vision.datetimepickeredittext.view.DatePickerEditText
                        android:id="@+id/add_task_notification_date_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/select_notification_date" />

                    <io.blackbox_vision.datetimepickeredittext.view.TimePickerEditText
                        android:id="@+id/add_task_notification_time_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/select_time" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/add_task_button"
                        style="@style/AppTheme.RoundedCornerMaterialButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/ic_task_add2"
                        android:padding="16dp"
                        android:text="@string/create"
                        android:textColor="@color/white" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/next_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_task_add"
        android:transitionName="bg"
        app:backgroundTint="@color/white"
        app:fabSize="normal" />
</android.support.design.widget.CoordinatorLayout>